--- a/Bopapp/Web.config
+++ b/Bopapp/Web.config
@@ -6,9 +6,9 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="Boptest" />
-    <add key="MicrosoftAppId" value="19bf1a66-d520-4859-84ad-bb82d539b51a" />
-    <add key="MicrosoftAppPassword" value="3XySdzuHD3bQk107Kmy2Zur" />
+    <add key="BotId" value="ssdutbot" />
+    <add key="MicrosoftAppId" value="f675bdc6-4b02-43a5-8d66-c9a3bf772851" />
+    <add key="MicrosoftAppPassword" value="tFoVdnQOvpRNjTTCfMeFdcZ" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
