--- a/KnowledgeNetwork/KnowledgeNetwork.csproj
+++ b/KnowledgeNetwork/KnowledgeNetwork.csproj
@@ -48,13 +48,11 @@
     <Compile Include="Entity.cs" />
     <Compile Include="main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="reader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="data.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
