--- a/Bopapp/Bopapp.csproj
+++ b/Bopapp/Bopapp.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Dialogs\EchoDialog.cs" />
     <Compile Include="Dialogs\Luis.cs" />
+    <Compile Include="Dialogs\qnamaker.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
