--- a/KnowledgeNetwork/packages.config
+++ b/KnowledgeNetwork/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="jieba.NET" version="0.38.3" targetFramework="net452" />
   <package id="Microsoft.Azure.DocumentDB" version="1.14.0" targetFramework="net452" />
   <package id="Microsoft.Azure.Graphs" version="0.2.2-preview" targetFramework="net452" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net452" />
